deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: football
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: football
  ports:
    - port: 80
      targetPort: 8080
